v2.1/executionDetails.md
# Execution details

## SIW Plus execution details for `problem.pddl`

```
Match tree built with 119113 nodes.

PDDL problem description loaded:
    Domain: AGENTS-IN-THE-CITY
    Problem: COMPLETE-JOBS
    #Actions: 119113
    #Fluents: 1644
Landmarks found: 1
Starting search with IW (time budget is 60 secs)...
rel_plan size: 101
#RP_fluents 191
Caption
{#goals, #UNnachieved,  #Achieved} -> IW(max_w)

{1/1/0}:IW(1) -> [2][3][4][5][6][7][8][9][10][11][12][13][14][15][16][17][18][19][20][21][22][23][24][25][26][27][28][29][30][31][32][33][34][35][36][37][38][39][40][41][42][43][44][45][46][47][48][49][50][51][52][53][54][55][56][57][58][59][60][61][62][63][64][65][66][67][68][69][70][71][72][73][74][75][76][77][78][79][80][81][82][83][84]rel_plan size: 0
#RP_fluents 0Plan found with cost: 83
Total time: 218.97
Nodes generated during search: 126328
Nodes expanded during search: 124717
IW search completed in 218.97 secs
```

## SIW Plus plan output for `problem.pddl`

```
(GOTO MOTORCYCLE4 STORAGE3 WORKSHOP3)
(GOTO CAR4 STORAGE3 NODE4)
(GATHER CAR4 ITEM3 NODE4)
(GOTO CAR4 NODE4 NODE3)
(GATHER CAR4 ITEM4 NODE3)
(GOTO CAR4 NODE3 NODE2)
(GATHER CAR4 ITEM1 NODE2)
(GOTO CAR4 NODE2 NODE1)
(GATHER CAR4 ITEM2 NODE1)
(GOTO CAR4 NODE1 NODE0)
(GATHER CAR4 ITEM0 NODE0)
(GOTO CAR4 NODE0 WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_FINALISE_WORKSHOP WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ROLES CAR4 MOTORCYCLE4 WORKSHOP3)
(GOTO TRUCK4 STORAGE3 NODE4)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM0 CAR4 WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM1 CAR4 WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM2 CAR4 WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM3 CAR4 WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM4 CAR4 WORKSHOP3)
(ASSEMBLE_I7_RESOURCES_AQUIRED )
(ASSEMBLE_I7_CAR CAR4 WORKSHOP3)
(GOTO TRUCK1 STORAGE0 WORKSHOP3)
(GATHER TRUCK4 ITEM3 NODE4)
(CONSUME_ITEM4_ASSEMBLE_I7 CAR4)
(CONSUME_ITEM3_ASSEMBLE_I7 CAR4)
(CONSUME_ITEM2_ASSEMBLE_I7 CAR4)
(CONSUME_ITEM1_ASSEMBLE_I7 CAR4)
(CONSUME_ITEM0_ASSEMBLE_I7 CAR4)
(POST_ASSEMBLE_I7_FREEUP_EVERYTHING CAR4 MOTORCYCLE4 WORKSHOP3)
(PREP_ASSEMBLE_ITEM6_FINALISE_WORKSHOP WORKSHOP3)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ROLES TRUCK1 MOTORCYCLE4 WORKSHOP3)
(GOTO TRUCK4 NODE4 NODE3)
(GATHER TRUCK4 ITEM4 NODE3)
(GOTO TRUCK4 NODE3 NODE2)
(GATHER TRUCK4 ITEM1 NODE2)
(GOTO TRUCK4 NODE2 NODE1)
(GATHER TRUCK4 ITEM2 NODE1)
(GOTO TRUCK4 NODE1 NODE0)
(GATHER TRUCK4 ITEM0 NODE0)
(GOTO TRUCK4 NODE0 WORKSHOP3)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ITEM0 TRUCK4 WORKSHOP3)
(GOTO DRONE4 STORAGE3 NODE4)
(RELEASE_ASSEMBLED_ITEM7 CAR4)
```
