v2.2/executionDetails.md
# Execution details

## SIW Plus execution details for `problem.pddl`

```
Match tree built with 119113 nodes.

PDDL problem description loaded:
    Domain: AGENTS-IN-THE-CITY
    Problem: COMPLETE-JOBS
    #Actions: 119113
    #Fluents: 1644
Landmarks found: 1
Starting search with IW (time budget is 60 secs)...
rel_plan size: 105
#RP_fluents 196
Caption
{#goals, #UNnachieved,  #Achieved} -> IW(max_w)

{1/1/0}:IW(1) -> [2][3][4][5][6][7][8][9][10][11][12][13][14][15][16][17][18][19][20][21][22][23][24][25][26][27][28][29][30][31][32][33][34][35][36][37][38][39][40][41][42][43][44][45][46][47][48][49][50][51][52][53][54][55][56][57][58][59][60][61][62][63][64][65][66][67][68][69][70][71][72][73][74][75][76][77][78][79][80][81][82][83][84][85][86][87][88][89][90]rel_plan size: 0
#RP_fluents 0Plan found with cost: 89
Total time: 209.99
Nodes generated during search: 119301
Nodes expanded during search: 117976
IW search completed in 209.99 secs
```

## SIW Plus plan output for `problem.pddl`

```
(GOTO MOTORCYCLE4 STORAGE3 WORKSHOP3)
(GOTO TRUCK4 STORAGE3 WORKSHOP3)
(PREP_ASSEMBLE_ITEM9_FINALISE_WORKSHOP WORKSHOP0)
(PREP_ASSEMBLE_ITEM6_FINALISE_WORKSHOP WORKSHOP3)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ROLES TRUCK4 MOTORCYCLE4)
(GOTO CAR4 STORAGE3 NODE4)
(GATHER CAR4 ITEM3 NODE4)
(GOTO CAR4 NODE4 NODE3)
(GATHER CAR4 ITEM4 NODE3)
(GOTO CAR4 NODE3 NODE2)
(GATHER CAR4 ITEM1 NODE2)
(GOTO CAR4 NODE2 NODE1)
(GATHER CAR4 ITEM2 NODE1)
(GOTO CAR4 NODE1 NODE0)
(GATHER CAR4 ITEM0 NODE0)
(GOTO CAR4 NODE0 WORKSHOP3)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ITEM0 CAR4)
(GOTO TRUCK1 STORAGE0 WORKSHOP3)
(GOTO DRONE4 STORAGE3 NODE4)
(GATHER DRONE4 ITEM3 NODE4)
(GOTO DRONE4 NODE4 NODE3)
(GATHER DRONE4 ITEM4 NODE3)
(GOTO DRONE4 NODE3 NODE2)
(GATHER DRONE4 ITEM1 NODE2)
(GOTO DRONE4 NODE2 NODE1)
(GATHER DRONE4 ITEM2 NODE1)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ITEM1 CAR4)
(GOTO DRONE4 NODE1 NODE0)
(GATHER DRONE4 ITEM0 NODE0)
(GOTO DRONE4 NODE0 WORKSHOP3)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ITEM2 DRONE4)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ITEM3 DRONE4)
(PREP_ASSEMBLE_ITEM6_ARRANGE_ITEM4 DRONE4)
(ASSEMBLE_I6_RESOURCES_AQUIRED )
(ASSEMBLE_I6_MOTORCYCLE MOTORCYCLE4)
(CONSUME_ITEM4_ASSEMBLE_I6 DRONE4)
(CONSUME_ITEM1_ASSEMBLE_I6 CAR4)
(CONSUME_ITEM0_ASSEMBLE_I6 CAR4)
(CONSUME_ITEM3_ASSEMBLE_I6 DRONE4)
(CONSUME_ITEM2_ASSEMBLE_I6 DRONE4)
(POST_ASSEMBLE_I6_FREEUP_EVERYTHING TRUCK4 MOTORCYCLE4 WORKSHOP3)
(GIVE CAR4 TRUCK4 ITEM2 WORKSHOP3)
(GIVE CAR4 TRUCK4 ITEM3 WORKSHOP3)
(GIVE CAR4 TRUCK4 ITEM4 WORKSHOP3)
(RELEASE_ASSEMBLED_ITEM6 MOTORCYCLE4)
(PREP_ASSEMBLE_ITEM7_FINALISE_WORKSHOP WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ROLES CAR4 MOTORCYCLE4)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM0 DRONE4)
(GIVE TRUCK4 TRUCK1 ITEM3 WORKSHOP3)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM3 TRUCK1)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM1 DRONE4)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM2 TRUCK4)
(PREP_ASSEMBLE_ITEM7_ARRANGE_ITEM4 TRUCK4)
(ASSEMBLE_I7_RESOURCES_AQUIRED )
(ASSEMBLE_I7_CAR CAR4)
(CONSUME_ITEM4_ASSEMBLE_I7 TRUCK4)
(GOTO TRUCK4 WORKSHOP3 NODE4)
(CONSUME_ITEM3_ASSEMBLE_I7 TRUCK1)
(CONSUME_ITEM2_ASSEMBLE_I7 TRUCK4)
(CONSUME_ITEM1_ASSEMBLE_I7 DRONE4)
(CONSUME_ITEM0_ASSEMBLE_I7 DRONE4)
(POST_ASSEMBLE_I7_FREEUP_EVERYTHING CAR4 MOTORCYCLE4 WORKSHOP3)
(GOTO MOTORCYCLE4 WORKSHOP3 WORKSHOP0)
(PREP_ASSEMBLE_ITEM9_ARRANGE_ITEM6 MOTORCYCLE4)
(GOTO TRUCK1 WORKSHOP3 WORKSHOP0)
(PREP_ASSEMBLE_ITEM9_ARRANGE_ROLES TRUCK1 MOTORCYCLE4)
(GOTO CAR4 WORKSHOP3 WORKSHOP0)
(RELEASE_ASSEMBLED_ITEM7 CAR4)
(PREP_ASSEMBLE_ITEM9_ARRANGE_ITEM7 CAR4)
(GOTO TRUCK4 NODE4 NODE3)
(GATHER TRUCK4 ITEM4 NODE3)
(GOTO TRUCK4 NODE3 NODE2)
(GATHER TRUCK4 ITEM1 NODE2)
(GOTO TRUCK4 NODE2 NODE1)
(GOTO TRUCK4 NODE1 NODE0)
(GATHER TRUCK4 ITEM0 NODE0)
(GOTO TRUCK4 NODE0 WORKSHOP0)
(PREP_ASSEMBLE_ITEM9_ARRANGE_ITEM0 TRUCK4)
(PREP_ASSEMBLE_ITEM9_ARRANGE_ITEM1 TRUCK4)
(PREP_ASSEMBLE_ITEM9_ARRANGE_ITEM4 TRUCK4)
(ASSEMBLE_I9_RESOURCES_AQUIRED )
(ASSEMBLE_I9_TRUCK TRUCK1)
(CONSUME_ITEM7_ASSEMBLE_I9 CAR4)
(CONSUME_ITEM6_ASSEMBLE_I9 MOTORCYCLE4)
(CONSUME_ITEM4_ASSEMBLE_I9 TRUCK4)
(CONSUME_ITEM1_ASSEMBLE_I9 TRUCK4)
(CONSUME_ITEM0_ASSEMBLE_I9 TRUCK4)
(POST_ASSEMBLE_I9_FREEUP_EVERYTHING TRUCK1 MOTORCYCLE4 WORKSHOP3)
(RELEASE_ASSEMBLED_ITEM9 TRUCK1)
```
